succesfully created online portfolio with gh pages

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "alanbanks229.github.io",
   "version": "1.0.0",
   "description": "github personal portfolio website",
